--- a/eslint-config-typescript-base/package.json
+++ b/eslint-config-typescript-base/package.json
@@ -25,6 +25,6 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
-    "eslint-config-airbnb": "^18.2.1"
+    "eslint-config-airbnb-base": "^18.2.1"
   }
 }
